test/loop/confidence/errors/module_errors_2.loop
# Errors in pattern matching functions

require require

